<?xml version="1.0"?>
<package format="2">
  <name>llh_gnss_driver</name>
  <version>1.0.0</version>
  <description>Drivers processing gps data coming in the llh format into a position message in the utm coordinate system.</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <author email="herolada@fel.cvut.cz">Adam Herold</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depends>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>http_relay</exec_depend>  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>cras_py_common</exec_depend>
  <exec_depend>sound_play</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

</package>
