<?xml version="1.0"?>
<package format="3">
  <name>llh_gnss_driver</name>
  <version>1.0.0</version>
  <description>Drivers processing gps data coming in the llh format into a position message in the utm coordinate system.</description>

  <author email="peckama2@fel.cvut.cz">Martin Pecka</author>
  <author email="herolada@fel.cvut.cz">Adam Herold</author>
  <maintainer email="peckama2@fel.cvut.cz">Martin Pecka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>http_relay</exec_depend>  
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>cras_py_common</exec_depend>
  <exec_depend>sound_play</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend condition="$ROS_DISTRO != noetic">python-gpxpy</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-utm-pip</exec_depend>
  <exec_depend condition="$ROS_DISTRO != noetic">python-numpy</exec_depend>

  <exec_depend condition="$ROS_DISTRO == noetic">python3-gpxpy</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-utm</exec_depend>
  <exec_depend condition="$ROS_DISTRO == noetic">python3-numpy</exec_depend>


</package>
